# hero_common

./: .gitignore  CMakeLists.txt  Firmware.md  Gemfile  README.md  _config.yml  _layouts.md  about.md  assembly.md  calibration.md  hero-passos-iniciais.txt  hero.md  index.md  instalation.md  installation.md  materials.md  news.md  package.xml  pcb_assembly.md  pcb_order.md  printing.md  publications.md  rgbscreentest.py  robot_simulation.md  ros.md
hero_gazebo/: CMakeLists.txt  README.md  package.xml
hero_gazebo/include/hero_gazebo/: gazebo_ros_hero_color.h
hero_gazebo/launch/: empty.launch  env_spawn.launch  env_spawn_box_pushing.launch  env_spawn_bridge.launch  gazebo_bringup.launch  gazebo_wizard.launch  hero_gazebo.launch  hero_spawn.launch  spawn_multi.launch
hero_gazebo/script/: hero_setup_gui.ui  hero_wizard.py
hero_gazebo/script/resource/: gazebo_logo.qrc  resource.qrc
hero_gazebo/src/: gazebo_ros_hero_color.cpp
hero_gazebo/worlds/: hero.world  hero2.world
hero_gazebo/worlds/models/: arena.dae
hero_gazebo/worlds/models/arena_0/: arena.mtl  arena.urdf
hero_gazebo/worlds/models/arena_1/: arena.dae  arena.urdf  map.yaml
hero_gazebo/worlds/models/arena_2/: arena.dae  arena.mtl  arena.urdf
hero_gazebo/worlds/models/arena_3/: arena.dae  arena.urdf  map.yaml
hero_gazebo/worlds/models/arena_4/: arena.dae  arena.urdf
hero_gazebo/worlds/models/arena_5/: arena.urdf
hero_gazebo/worlds/models/arena_6/: arena.mtl  arena.urdf
hero_gazebo/worlds/models/arena_7/: arena.urdf  map.yaml
hero_gazebo/worlds/models/objects/cube/: cube.stl  cube.urdf
(+1425 files in other folders)
